--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     // Volley library
+    //noinspection OutdatedLibrary
     implementation 'com.android.volley:volley:1.0.0'
     // Recyclerview Library
     implementation 'com.android.support:recyclerview-v7:27.0.2'
@@ -33,4 +34,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    testImplementation 'org.json:json:20140107'
+    implementation "org.mindrot:jbcrypt:0.4"
+
+    testImplementation "org.powermock:powermock-module-junit4:1.7.4"
+    testImplementation "org.powermock:powermock-api-mockito2:1.7.4"
+
+    implementation 'com.auth0:java-jwt:3.10.1'
+
+    implementation 'commons-codec:commons-codec:1.8'
 }
