--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.demotxt.myapp.myapplication">
 
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".Login.SplashScreen"/>
+        <activity android:name=".Login.SelectMhe"/>
+        <activity android:name=".Login.LoginBmr"/>
+        <activity android:name=".Dashboardbmr.activities.MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +31,7 @@
             </intent-filter>
 
         </activity>
-        <activity android:name=".activities.AnimeActivity">
+        <activity android:name=".Dashboardbmr.activities.AnimeActivity">
 
         </activity>
     </application>
