--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login.SplashScreen"/>
+        <activity android:name=".Dashboardbmr.activities.MainActivity"/>
         <activity android:name=".Login.SelectMhe"/>
         <activity android:name=".Login.LoginBmr"/>
-        <activity android:name=".Dashboardbmr.activities.MainActivity">
+        <activity android:name=".Login.SplashScreen">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
